[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]

[workspace]
resolver = "2"
members = ["teller-cli", "teller-core", "teller-providers", "xtask"]
default-members = ["teller-cli"]

[workspace.package]

description = "A developer-first multi provider secret manager"
authors = ["Dotan Nahum <dotan@rng0.io>", "Elad Kaplan <kaplan.elad@gmail.com>"]
documentation = "https://docs.rs/teller/"
repository = "https://github.com/tellerops/teller"
keywords = ["vault", "secret", "devtool"]
license = "Apache-2.0"
readme = "./README.md"


[workspace.dependencies]

teller-providers = { version = "2.0.7", path = "./teller-providers" }
teller-core = { version = "2.0.7", path = "./teller-core" }

serde = "1"
serde_json = "1"
serde_yaml = "0.9"
serde_derive = "1"
serde_variant = "0.1.2"
async-trait = "0.1.80"
lazy_static = "1.4.0"
strum = { version = "0.25", features = ["derive"] }
shell-words = "1"
duct = "0.13.6"
thiserror = "1.0.49"
aho-corasick = "1"
tokio = { version = "1", features = ["full"] }
tera = { version = "1" }

# dev deps
insta = { version = "1.29.0", features = ["redactions", "yaml", "filters"] }
